fix: use only one ingress (#21)